--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.databene</groupId>
     <artifactId>jdbacl</artifactId>
-    <version>0.6.3</version>
+    <version>0.6.4</version>
 
     <packaging>jar</packaging>
     <name>databene jdbacl</name>
@@ -46,7 +46,7 @@
         <dependency>
             <groupId>org.databene</groupId>
             <artifactId>databene-commons</artifactId>
-            <version>0.5.3</version>
+            <version>0.5.4</version>
         </dependency>
         
 		<!-- logging -->
@@ -65,6 +65,7 @@
             <scope>test</scope>
         </dependency>
 
+		<!--  databases -->
 		<dependency>
 		    <groupId>hsqldb</groupId>
 		    <artifactId>hsqldb</artifactId>
@@ -72,6 +73,19 @@
 		    <scope>test</scope>
 		</dependency>
 
+		<dependency>
+		    <groupId>com.h2database</groupId>
+		    <artifactId>h2</artifactId>
+		    <version>1.2.136</version>
+		    <scope>provided</scope>
+		</dependency>
+
+		<dependency>
+		    <groupId>net.sf.squirrel-sql.thirdparty-non-maven</groupId>
+		    <artifactId>jaybird</artifactId>
+		    <version>2.1.6</version>
+		    <scope>provided</scope>
+		</dependency>
     </dependencies>
     
     <build>
