--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 
     <properties>
     	<commons_version>0.5.8</commons_version>
+    	<contiperf_version>2.0.0</contiperf_version>
     </properties>
 
     <packaging>jar</packaging>
@@ -51,6 +52,11 @@
             <groupId>org.databene</groupId>
             <artifactId>databene-commons</artifactId>
             <version>${commons_version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.databene</groupId>
+            <artifactId>contiperf</artifactId>
+            <version>${contiperf_version}</version>
         </dependency>
         
 		<!-- logging -->
