Added developer info
git-svn-id: https://svn.code.sf.net/p/jdbacl/code/trunk@198 ae0afc29-7cfe-489a-95cf-4bb878f6dcf4

--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,20 @@
         </license>
     </licenses>
 
+    <developers>
+        <developer>
+            <name>Volker Bergmann</name>
+            <id>vbergmann</id>
+            <email>volker@databene.org</email>
+            <timezone>+1</timezone>
+            <roles>
+                <role>Project Founder</role>
+                <role>Architect</role>
+                <role>Developer</role>
+            </roles>
+        </developer>
+    </developers>
+
     <dependencies>
     
     	<!-- databene dependencies -->
