--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <properties>
     	<commons_version>0.5.8</commons_version>
-    	<contiperf_version>2.0.0</contiperf_version>
+    	<contiperf_version>2.0.0-SNAPSHOT-2011-06-16</contiperf_version>
     </properties>
 
     <packaging>jar</packaging>
