--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.databene</groupId>
     <artifactId>jdbacl</artifactId>
-    <version>0.6.8</version>
+    <version>0.6.9</version>
 
     <properties>
     	<commons_version>0.5.8</commons_version>
@@ -192,7 +192,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>org.databene.benerator.main.Benerator</mainClass>
+                            <mainClass>org.databene.jdbacl.Main</mainClass>
                             <addClasspath>true</addClasspath>
                             <classpathPrefix>lib/</classpathPrefix>
                         </manifest>
