--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 
     <properties>
     	<commons_version>0.5.9</commons_version>
+    	<webdecs_version>0.6.0</webdecs_version>
     	<contiperf_version>2.0.0-SNAPSHOT-2011-06-16</contiperf_version>
     </properties>
 
@@ -66,6 +67,11 @@
             <groupId>org.databene</groupId>
             <artifactId>databene-commons</artifactId>
             <version>${commons_version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.databene</groupId>
+            <artifactId>databene-webdecs</artifactId>
+            <version>${webdecs_version}</version>
         </dependency>
         <dependency>
             <groupId>org.databene</groupId>
