--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,12 @@
 
     <groupId>org.databene</groupId>
     <artifactId>jdbacl</artifactId>
-    <version>0.6.10</version>
+    <version>0.6.11</version>
 
     <properties>
     	<commons_version>0.5.9</commons_version>
     	<webdecs_version>0.6.0</webdecs_version>
-    	<contiperf_version>2.0.0-SNAPSHOT-2011-06-16</contiperf_version>
+    	<contiperf_version>2.0.0</contiperf_version>
     </properties>
 
     <packaging>jar</packaging>
