Introduced dialect for HSQL 2
git-svn-id: https://svn.code.sf.net/p/jdbacl/code/trunk@364 ae0afc29-7cfe-489a-95cf-4bb878f6dcf4

--- a/src/main/resources/org/databene/jdbacl/databene.db_dialect.properties
+++ b/src/main/resources/org/databene/jdbacl/databene.db_dialect.properties
@@ -1,6 +1,7 @@
 oracle=org.databene.jdbacl.dialect.OracleDialect
 db2=org.databene.jdbacl.dialect.DB2Dialect
 postgres=org.databene.jdbacl.dialect.PostgreSQLDialect
+hsql 2=org.databene.jdbacl.dialect.HSQL2Dialect
 hsql=org.databene.jdbacl.dialect.HSQLDialect
 firebird=org.databene.jdbacl.dialect.FirebirdDialect
 derby=org.databene.jdbacl.dialect.DerbyDialect
