--- a/src/main/resources/org/databene/jdbacl/databene.db_dialect.properties
+++ b/src/main/resources/org/databene/jdbacl/databene.db_dialect.properties
@@ -3,6 +3,7 @@ db2=org.databene.jdbacl.dialect.DB2Dialect
 postgres=org.databene.jdbacl.dialect.PostgreSQLDialect
 hsql 2=org.databene.jdbacl.dialect.HSQL2Dialect
 hsql=org.databene.jdbacl.dialect.HSQLDialect
+firebird 2.5=org.databene.jdbacl.dialect.Firebird2_5Dialect
 firebird=org.databene.jdbacl.dialect.FirebirdDialect
 derby=org.databene.jdbacl.dialect.DerbyDialect
 sql_server=org.databene.jdbacl.dialect.SqlServerDialect
