Created DatabaseDialect for Derby 10.6+ which supports sequences
git-svn-id: https://svn.code.sf.net/p/jdbacl/code/trunk@393 ae0afc29-7cfe-489a-95cf-4bb878f6dcf4

--- a/src/main/resources/org/databene/jdbacl/databene.db_dialect.properties
+++ b/src/main/resources/org/databene/jdbacl/databene.db_dialect.properties
@@ -5,6 +5,7 @@ hsql 2=org.databene.jdbacl.dialect.HSQL2Dialect
 hsql=org.databene.jdbacl.dialect.HSQLDialect
 firebird 2.5=org.databene.jdbacl.dialect.Firebird2_5Dialect
 firebird=org.databene.jdbacl.dialect.FirebirdDialect
+derby 10.6=org.databene.jdbacl.dialect.Derby10_6Dialect
 derby=org.databene.jdbacl.dialect.DerbyDialect
 sql_server=org.databene.jdbacl.dialect.SqlServerDialect
 h2=org.databene.jdbacl.dialect.H2Dialect
