Added dependency to Derby 10.7.1.1
git-svn-id: https://svn.code.sf.net/p/jdbacl/code/trunk@395 ae0afc29-7cfe-489a-95cf-4bb878f6dcf4

--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,12 @@
 		    <version>8.4-701.jdbc4</version>
 		    <scope>provided</scope>
 		</dependency>
+		<dependency>
+		    <groupId>org.apache.derby</groupId>
+		    <artifactId>derby</artifactId>
+		    <version>10.7.1.1</version>
+		    <scope>provided</scope>
+		</dependency>
 		
     </dependencies>
     
