--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,11 @@
 
     <groupId>org.databene</groupId>
     <artifactId>jdbacl</artifactId>
-    <version>0.6.14</version>
+    <version>0.7.0</version>
 
     <properties>
     	<webdecs_version>0.6.4</webdecs_version>
+    	<gui_version>0.2.12</gui_version>
     	<script_version>0.7.3</script_version>
     	<commons_version>0.5.12</commons_version>
     	<contiperf_version>2.0.0</contiperf_version>
@@ -68,6 +69,11 @@
             <groupId>org.databene</groupId>
             <artifactId>databene-commons</artifactId>
             <version>${commons_version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.databene</groupId>
+            <artifactId>databene-gui</artifactId>
+            <version>${gui_version}</version>
         </dependency>
         <dependency>
             <groupId>org.databene</groupId>
@@ -225,7 +231,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>org.databene.jdbacl.Main</mainClass>
+                            <mainClass>org.databene.jdbacl.swing.JdbaclGUI</mainClass>
                             <addClasspath>true</addClasspath>
                             <classpathPrefix>lib/</classpathPrefix>
                         </manifest>
