--- a/pom.xml
+++ b/pom.xml
@@ -93,22 +93,15 @@
         </dependency>
         
 		<!-- logging -->
-        <dependency>
+        <dependency> <!-- TODO do not include this here -->
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.5.8</version>
             <scope>provided</scope>
         </dependency>
     
-    	<!-- testing --> 
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.7</version>
-            <scope>test</scope>
-        </dependency>
-
 		<!--  databases -->
+		<!-- 
 		<dependency>
 		    <groupId>hsqldb</groupId>
 		    <artifactId>hsqldb</artifactId>
@@ -130,7 +123,7 @@
 		    <scope>provided</scope>
 		</dependency>
 
-		<dependency> <!-- needed for firebird -->
+		<dependency> needed for firebird
 		    <groupId>javax.resource</groupId>
 		    <artifactId>connector-api</artifactId>
 		    <version>1.5</version>
@@ -149,7 +142,16 @@
 		    <version>10.7.1.1</version>
 		    <scope>provided</scope>
 		</dependency>
-		
+		-->
+
+    	<!-- testing --> 
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.9</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
     
     <build>
