--- a/pom.xml
+++ b/pom.xml
@@ -101,7 +101,6 @@
         </dependency>
     
 		<!--  databases -->
-		<!-- 
 		<dependency>
 		    <groupId>hsqldb</groupId>
 		    <artifactId>hsqldb</artifactId>
@@ -113,37 +112,39 @@
 		    <groupId>com.h2database</groupId>
 		    <artifactId>h2</artifactId>
 		    <version>1.2.136</version>
-		    <scope>provided</scope>
-		</dependency>
-
-		<dependency>
-		    <groupId>net.sf.squirrel-sql.thirdparty-non-maven</groupId>
-		    <artifactId>jaybird</artifactId>
-		    <version>2.1.6</version>
-		    <scope>provided</scope>
-		</dependency>
-
-		<dependency> needed for firebird
-		    <groupId>javax.resource</groupId>
-		    <artifactId>connector-api</artifactId>
-		    <version>1.5</version>
-		    <scope>provided</scope>
+		    <scope>test</scope>
 		</dependency>
 
 		<dependency>
 		    <groupId>postgresql</groupId>
 		    <artifactId>postgresql</artifactId>
 		    <version>8.4-701.jdbc4</version>
-		    <scope>provided</scope>
+		    <scope>test</scope>
 		</dependency>
+
 		<dependency>
 		    <groupId>org.apache.derby</groupId>
 		    <artifactId>derby</artifactId>
 		    <version>10.7.1.1</version>
-		    <scope>provided</scope>
+		    <scope>test</scope>
 		</dependency>
-		-->
+		
+		<dependency>
+		    <groupId>net.sf.squirrel-sql.thirdparty-non-maven</groupId>
+		    <artifactId>jaybird</artifactId>
+		    <version>2.1.6</version>
+		    <scope>test</scope>
+		</dependency>
 
+		<dependency> <!-- needed for firebird -->
+		    <groupId>javax.resource</groupId>
+		    <artifactId>connector-api</artifactId>
+		    <version>1.5</version>
+		    <scope>test</scope>
+		</dependency>
+		
+		
+		
     	<!-- testing --> 
         <dependency>
             <groupId>junit</groupId>
