--- a/src/main/resources/org/databene/jdbacl/version.properties
+++ b/src/main/resources/org/databene/jdbacl/version.properties
@@ -1,2 +1,5 @@
 jdbacl_version=${pom.version}
+webdecs_version=${webdecs_version}
+script_version=${script_version}
 commons_version=${commons_version}
+contiperf_version=${contiperf_version}
