--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.databene</groupId>
     <artifactId>jdbacl</artifactId>
-    <version>0.8.1</version>
+    <version>0.8.2</version>
 
     <properties>
     	<webdecs_version>0.6.7</webdecs_version>
@@ -127,6 +127,12 @@
 		    <artifactId>derby</artifactId>
 		    <version>10.7.1.1</version>
 		    <scope>test</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>cubrid</groupId>
+			<artifactId>cubrid-jdbc</artifactId>
+			<version>8.4.1.2032</version>
 		</dependency>
 		
 		<dependency>
