Supporting CUBRID database
git-svn-id: https://svn.code.sf.net/p/jdbacl/code/trunk@567 ae0afc29-7cfe-489a-95cf-4bb878f6dcf4

--- a/src/main/resources/org/databene/jdbacl/databene.db_dialect.properties
+++ b/src/main/resources/org/databene/jdbacl/databene.db_dialect.properties
@@ -10,3 +10,4 @@ derby=org.databene.jdbacl.dialect.DerbyDialect
 sql_server=org.databene.jdbacl.dialect.SqlServerDialect
 h2=org.databene.jdbacl.dialect.H2Dialect
 mysql=org.databene.jdbacl.dialect.MySQLDialect
+cubrid=org.databene.jdbacl.dialect.CubridDialect
