Fixed dependency scope
git-svn-id: https://svn.code.sf.net/p/jdbacl/code/trunk@568 ae0afc29-7cfe-489a-95cf-4bb878f6dcf4

--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,7 @@
 			<groupId>cubrid</groupId>
 			<artifactId>cubrid-jdbc</artifactId>
 			<version>8.4.1.2032</version>
+		    <scope>test</scope>
 		</dependency>
 		
 		<dependency>
