--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,12 @@
 
     <groupId>org.databene</groupId>
     <artifactId>jdbacl</artifactId>
-    <version>0.8.6-SNAPSHOT</version>
+    <version>0.8.6</version>
 
     <properties>
-    	<webdecs_version>0.6.13-SNAPSHOT</webdecs_version>
-    	<script_version>0.7.10-SNAPSHOT</script_version>
-    	<commons_version>0.5.19-SNAPSHOT</commons_version>
+    	<webdecs_version>0.6.13</webdecs_version>
+    	<script_version>0.7.10</script_version>
+    	<commons_version>0.5.19</commons_version>
     	<contiperf_version>2.3.0</contiperf_version>
     </properties>
 
