--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,12 @@
 
     <groupId>org.databene</groupId>
     <artifactId>jdbacl</artifactId>
-    <version>0.8.7</version>
+    <version>0.8.8-SNAPSHOT</version>
 
     <properties>
-    	<webdecs_version>0.6.14</webdecs_version>
-    	<script_version>0.7.11</script_version>
-    	<commons_version>0.5.20</commons_version>
+    	<webdecs_version>0.6.15-SNAPSHOT</webdecs_version>
+    	<script_version>0.7.12-SNAPSHOT</script_version>
+    	<commons_version>0.5.21-SNAPSHOT</commons_version>
     	<contiperf_version>2.3.0</contiperf_version>
     </properties>
 
