--- a/pom.xml
+++ b/pom.xml
@@ -272,6 +272,10 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>2.6.1</version>
+				<configuration>
+					<encoding>UTF-8</encoding>
+				</configuration>
+				<!--  
 				<executions>
 					<execution>
 						<goals>
@@ -280,6 +284,7 @@
 						</goals>
 					</execution>
 				</executions>
+				-->
 			</plugin>
         </plugins>
     </build>
