--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,13 @@
 
     <groupId>org.databene</groupId>
     <artifactId>jdbacl</artifactId>
-    <version>0.8.9</version>
+    <version>0.8.10-SNAPSHOT</version>
 
     <properties>
-    	<webdecs_version>0.6.16</webdecs_version>
-    	<script_version>0.7.13</script_version>
-    	<commons_version>0.5.22</commons_version>
-    	<contiperf_version>2.3.2</contiperf_version>
+    	<webdecs_version>0.6.16-SNAPSHOT</webdecs_version>
+    	<script_version>0.7.13-SNAPSHOT</script_version>
+    	<commons_version>0.5.22-SNAPSHOT</commons_version>
+    	<contiperf_version>2.3.2-SNAPSHOT</contiperf_version>
     </properties>
 
     <packaging>jar</packaging>
