--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,12 @@
 
     <groupId>org.databene</groupId>
     <artifactId>jdbacl</artifactId>
-    <version>0.8.12-SNAPSHOT</version>
+    <version>0.8.12</version>
 
     <properties>
-    	<webdecs_version>0.7.0-SNAPSHOT</webdecs_version>
-    	<script_version>0.7.16-SNAPSHOT</script_version>
-    	<commons_version>0.5.25-SNAPSHOT</commons_version>
+    	<webdecs_version>0.7.0</webdecs_version>
+    	<script_version>0.7.16</script_version>
+    	<commons_version>0.5.25</commons_version>
     	<contiperf_version>2.3.2</contiperf_version>
     </properties>
 
@@ -166,7 +166,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.10</version>
+            <version>4.11</version>
             <scope>test</scope>
         </dependency>
 
