--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,12 @@
 
     <groupId>org.databene</groupId>
     <artifactId>jdbacl</artifactId>
-    <version>0.8.13</version>
+    <version>0.8.14-SNAPSHOT</version>
 
     <properties>
-    	<webdecs_version>0.7.1</webdecs_version>
-    	<script_version>0.7.17</script_version>
-    	<commons_version>0.5.27</commons_version>
+    	<webdecs_version>0.7.2-SNAPSHOT</webdecs_version>
+    	<script_version>0.7.18-SNAPSHOT</script_version>
+    	<commons_version>0.5.28-SNAPSHOT</commons_version>
     	<contiperf_version>2.3.2</contiperf_version>
     </properties>
 
