--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,12 @@
 
     <groupId>org.databene</groupId>
     <artifactId>jdbacl</artifactId>
-    <version>0.8.16-SNAPSHOT</version>
+    <version>0.8.16</version>
 
     <properties>
-    	<webdecs_version>0.8.1-SNAPSHOT</webdecs_version>
-    	<script_version>0.7.20-SNAPSHOT</script_version>
-    	<commons_version>0.5.31-SNAPSHOT</commons_version>
+    	<webdecs_version>0.8.1</webdecs_version>
+    	<script_version>0.7.20</script_version>
+    	<commons_version>0.5.31</commons_version>
     	<contiperf_version>2.3.2</contiperf_version>
     </properties>
 
