--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,12 @@
 
     <groupId>org.databene</groupId>
     <artifactId>jdbacl</artifactId>
-    <version>0.8.18-EA1</version>
+    <version>0.8.18</version>
 
     <properties>
-    	<webdecs_version>0.8.4-EA1</webdecs_version>
-    	<script_version>0.7.22-EA1</script_version>
-    	<commons_version>0.5.33-EA1</commons_version>
+    	<webdecs_version>0.8.4</webdecs_version>
+    	<script_version>0.7.22</script_version>
+    	<commons_version>0.5.33</commons_version>
     	<contiperf_version>2.3.2</contiperf_version>
     </properties>
 
