--- a/pom.xml
+++ b/pom.xml
@@ -162,12 +162,20 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
 		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.16</version>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.13.3</version>
 			<scope>test</scope>
 		</dependency>
+
+		<!--		<dependency>-->
+		<!--			<groupId>log4j</groupId>-->
+		<!--			<artifactId>log4j</artifactId>-->
+		<!--			<version>1.2.17</version>-->
+		<!--			<scope>provided</scope>-->
+		<!--		</dependency>-->
 
 		<dependency>
 			<groupId>junit</groupId>
